--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -12,7 +12,8 @@
 
 <body>
     <header class="header">
-        <div><a href="../index.html">logo</a></div>
+        <div><a href="../index.html"><img class="logo" src="../images/green-leaf-organic-nature-logo-vector-20043821.jpg" alt="logo"></a></div>
+        
         <nav>
             <ul class="menu">
                 <li><a class="link" href="../index.html">Home</a></li>
