--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <div><a href="">logo</a></div>
+        <div><a href=""><img class="logo" src="./images/green-leaf-organic-nature-logo-vector-20043821.jpg" alt="logo"></a></div>
         <nav>
             <ul class="menu">
                 <li><a class="link active" href="">Home</a></li>
@@ -32,8 +32,10 @@
                 <h3 class="article__title text-center">Mountains</h3>
                 <img class="article__img" src="./images/mountains.jpg" alt="mountains">
                 <p class="article__content">
-                    <b>mountain (mn. ch. — mountains) is a form of relief, an isolated sharp elevation of the terrain with </b>
-                    <i>By the nature of the peaks, there are peak-shaped, dome-shaped, plateform and other mountains. The peaks of seamounts can be islands. </i> 
+                    <b>mountain (mn. ch. — mountains) is a form of relief, an isolated sharp elevation of the terrain
+                        with </b>
+                    <i>By the nature of the peaks, there are peak-shaped, dome-shaped, plateform and other mountains.
+                        The peaks of seamounts can be islands. </i>
                     By origin, they speak of tectonodenudation mountains and volcanic ones[3].Anthropogeographically,
                     mountains represent a very diverse and often complex set of geographical conditions. When analyzing
                     these conditions, anthropogeography highlights the individual geographical conditions of a
@@ -71,7 +73,7 @@
             <div class="article__item">
                 <h3 class="article__title text-center">animals</h3>
                 <img class="article__img" src="./images/animals.jpg" alt="animals">
-                <p  class="article__content">
+                <p class="article__content">
 
 
                     A dog (Latin Canis familiaris, or Canis lupus familiaris) is a pet, one of the most popular (along
